--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html>
 <html>
+	<head>
+		<meta charset="UTF-8"/>
+		<title>My NGINX project</title>
+	</head>
 	<body>
-		<h1>Yun</h1>
+		<h1>Hi Yun. I am served from NGINX</h1>
 	</body>
 </html>
